Bug 116070 - Crash in dialog Edit page break
Summary: Crash in dialog Edit page break
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.1.0.0.alpha0+
Hardware: All Linux (All)
: highest critical
Assignee: Not Assigned
URL:
Whiteboard: target:6.1.0 target:7.2.0
Keywords: bibisected, bisected, regression
: 116503 (view as bug list)
Depends on:
Blocks: Regressions-Dialog-Tunneling
  Show dependency treegraph
 
Reported: 2018-02-27 20:03 UTC by raal
Modified: 2021-01-07 08:58 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
gdb backtrace (30.07 KB, text/plain)
2018-02-28 09:07 UTC, Xisco Faulí
Details
valgrind trace (47.73 KB, application/gzip)
2018-03-01 21:37 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description raal 2018-02-27 20:03:05 UTC
Description:
Crash 

Steps to Reproduce:
1.insert page break -  CTRL+Enter
2.click on the blue line - Click in the pop up on "Edit page break"
3. click OK to close the dialog


Actual Results:  
Crash

Expected Results:
No crash


Reproducible: Always


User Profile Reset: No



Additional Info:


User-Agent: Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:58.0) Gecko/20100101 Firefox/58.0
Comment 1 raal 2018-02-27 20:04:22 UTC
This seems to have begun at the below commit.
Adding Cc: to Jan Holesovsky ; Could you possibly take a look at this one?
Thanks
 28e612738664e33d5d2d773c3b3c263806d58caa is the first bad commit
commit 28e612738664e33d5d2d773c3b3c263806d58caa
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Wed Jan 17 09:42:28 2018 +0100

    source 34527cec54ca634b831cfa5ac1098c4046818ac3
author	Jan Holesovsky <kendy@collabora.com>	2018-01-16 18:54:19 +0100
committer	Jan Holesovsky <kendy@collabora.com>	2018-01-17 08:48:02 +0100
commit 34527cec54ca634b831cfa5ac1098c4046818ac3 (patch)
tree d75a2e21ab0d71953a65334d1376ec916ea0221e
parent ce9594d40a8d72370624b045761df4e0078d601e (diff)
lokdialog: Convert the Format -> Paragraph... dialog to async exec.
Comment 2 Xisco Faulí 2018-02-28 09:03:38 UTC
Reproduced in

Version: 6.1.0.0.alpha0+
Build ID: e2cb154195fdc2ffccdb6f5e87cae8b29640b3eb
CPU threads: 4; OS: Linux 4.13; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group
Comment 3 Xisco Faulí 2018-02-28 09:07:09 UTC
Created attachment 140205 [details]
gdb backtrace
Comment 4 Julien Nabet 2018-03-01 21:37:55 UTC
Created attachment 140279 [details]
valgrind trace

On pc Debian x86-64 with master sources updated today, I could reproduce this.
I attached Valgrind trace.
Comment 5 Jan Holesovsky 2018-03-01 21:48:27 UTC
Thank you all for reporting and bisecting!  No further info is necessary, the fix is pending a Jenkins build:

https://gerrit.libreoffice.org/50598
Comment 6 Commit Notification 2018-03-02 08:27:42 UTC
Jan Holesovsky committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=bba8e5aa6d1968e5279b3fe368c0f81145513d04

tdf#116070: Use a valid PaM when confirming the dialog.

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Jan Holesovsky 2018-03-02 08:28:12 UTC
Fixed now :-)
Comment 8 Xisco Faulí 2018-03-02 10:17:22 UTC
Verified in

Version: 6.1.0.0.alpha0+
Build ID: 1126fcfdedc7047a8e8e4a5925c7dd2fde7a0436
CPU threads: 4; OS: Linux 4.13; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group
Comment 9 Xisco Faulí 2018-03-19 18:27:00 UTC
*** Bug 116503 has been marked as a duplicate of this bug. ***
Comment 10 Commit Notification 2021-01-07 00:26:33 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d4a96a931210fc4713d4ab6325e30cd34ffa7b37

tdf#134439, tdf#116070: sw: Add UItest

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.