tdf#116070: Use a valid PaM when confirming the dialog.

Change-Id: I8d45e709e6414814b3cf04bbd09588ab4e096e8c
Reviewed-on: https://gerrit.libreoffice.org/50598
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Jan Holesovsky <kendy@collabora.com>