sw/source/uibase/shells/textsh1.cxx
@@ -1080,7 +1080,7 @@ void SwTextShell::Execute(SfxRequest &rReq)
                 std::shared_ptr<SfxRequest> pRequest(new SfxRequest(rReq));
                 rReq.Ignore(); // the 'old' request is not relevant any more
 
-                pDlg->StartExecuteAsync([pDlg, &rWrtSh, pRequest, nDefDist, pPaM](sal_Int32 nResult){
+                pDlg->StartExecuteAsync([pDlg, &rWrtSh, pRequest, nDefDist](sal_Int32 nResult){
                     if (nResult == RET_OK)
                     {
                         // Apply defaults if necessary.
@@ -1110,7 +1110,7 @@ void SwTextShell::Execute(SfxRequest &rReq)
                             pSet->Put(SfxStringItem(FN_DROP_CHAR_STYLE_NAME, sCharStyleName));
                         }
 
-                        sw_ParagraphDialogResult(pSet, rWrtSh, *pRequest, pPaM);
+                        sw_ParagraphDialogResult(pSet, rWrtSh, *pRequest, rWrtSh.GetCursor());
                     }
                 });
             }
